--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -1,5 +1,10 @@
 # Make a copy of this file with the name .env and assign values to variables
 
+# Location of the application routes
+FLASK_APP=api/app.py
+# Ensure print statements appear as they happen
+PYTHONUNBUFFERED=1
+
 # How you connect to Elasticsearch: change details to your instance
 ELASTICSEARCH_URL=http://localhost:9200
 ELASTICSEARCH_USER=elastic
