--- a/example-apps/chatbot-rag-app/requirements.in
+++ b/example-apps/chatbot-rag-app/requirements.in
@@ -16,5 +16,5 @@ langchain-mistralai
 
 # EDOT dependencies
 elastic-opentelemetry
-# Additional LLM support not in EDOT
+# Additional LLM support not yet in EDOT
 langtrace-python-sdk
