--- a/example-apps/chatbot-rag-app/requirements.txt
+++ b/example-apps/chatbot-rag-app/requirements.txt
@@ -6,7 +6,7 @@
 #
 aiohappyeyeballs==2.4.6
     # via aiohttp
-aiohttp==3.11.12
+aiohttp==3.11.13
     # via
     #   langchain
     #   langchain-community
@@ -22,15 +22,15 @@ attrs==25.1.0
     # via aiohttp
 blinker==1.9.0
     # via flask
-boto3==1.36.24
+boto3==1.37.0
     # via
     #   langchain-aws
     #   langtrace-python-sdk
-botocore==1.36.24
+botocore==1.37.0
     # via
     #   boto3
     #   s3transfer
-cachetools==5.5.1
+cachetools==5.5.2
     # via google-auth
 certifi==2025.1.31
     # via
@@ -80,7 +80,7 @@ flask==3.1.0
     # via
     #   -r requirements.in
     #   flask-cors
-flask-cors==5.0.0
+flask-cors==5.0.1
     # via -r requirements.in
 frozenlist==1.5.0
     # via
@@ -109,11 +109,11 @@ google-cloud-aiplatform==1.81.0
     # via langchain-google-vertexai
 google-cloud-bigquery==3.29.0
     # via google-cloud-aiplatform
-google-cloud-core==2.4.1
+google-cloud-core==2.4.2
     # via
     #   google-cloud-bigquery
     #   google-cloud-storage
-google-cloud-resource-manager==1.14.0
+google-cloud-resource-manager==1.14.1
     # via google-cloud-aiplatform
 google-cloud-storage==2.19.0
     # via
@@ -127,7 +127,7 @@ google-resumable-media==2.7.2
     # via
     #   google-cloud-bigquery
     #   google-cloud-storage
-googleapis-common-protos[grpc]==1.67.0
+googleapis-common-protos[grpc]==1.68.0
     # via
     #   google-api-core
     #   grpc-google-iam-v1
@@ -164,7 +164,7 @@ httpx-sse==0.4.0
     #   langchain-community
     #   langchain-google-vertexai
     #   langchain-mistralai
-huggingface-hub==0.29.0
+huggingface-hub==0.29.1
     # via
     #   tokenizers
     #   transformers
@@ -200,7 +200,7 @@ langchain-cohere==0.4.2
     # via -r requirements.in
 langchain-community==0.3.18
     # via langchain-cohere
-langchain-core==0.3.37
+langchain-core==0.3.39
     # via
     #   langchain
     #   langchain-aws
@@ -215,13 +215,13 @@ langchain-elasticsearch==0.3.2
     # via -r requirements.in
 langchain-google-vertexai==2.0.13
     # via -r requirements.in
-langchain-mistralai==0.2.6
+langchain-mistralai==0.2.7
     # via -r requirements.in
-langchain-openai==0.3.6
+langchain-openai==0.3.7
     # via -r requirements.in
 langchain-text-splitters==0.3.6
     # via langchain
-langsmith==0.3.8
+langsmith==0.3.11
     # via
     #   langchain
     #   langchain-community
@@ -250,7 +250,7 @@ numpy==2.2.3
     #   langchain-community
     #   shapely
     #   transformers
-openai==1.63.2
+openai==1.64.0
     # via langchain-openai
 opentelemetry-api==1.30.0
     # via
@@ -323,11 +323,12 @@ packaging==24.2
     #   google-cloud-bigquery
     #   huggingface-hub
     #   langchain-core
+    #   langsmith
     #   marshmallow
     #   opentelemetry-instrumentation
     #   opentelemetry-instrumentation-sqlalchemy
     #   transformers
-propcache==0.2.1
+propcache==0.3.0
     # via
     #   aiohttp
     #   yarl
@@ -372,7 +373,7 @@ pydantic-core==2.27.2
     # via
     #   cohere
     #   pydantic
-pydantic-settings==2.7.1
+pydantic-settings==2.8.0
     # via langchain-community
 python-dateutil==2.9.0.post0
     # via
@@ -491,7 +492,9 @@ urllib3==2.3.0
     #   sentry-sdk
     #   types-requests
 werkzeug==3.1.3
-    # via flask
+    # via
+    #   flask
+    #   flask-cors
 wrapt==1.17.2
     # via
     #   deprecated
@@ -529,4 +532,3 @@ opentelemetry-instrumentation-system-metrics==0.51b0
 opentelemetry-instrumentation-tortoiseorm==0.51b0
 opentelemetry-instrumentation-urllib3==0.51b0
 elastic-opentelemetry-instrumentation-openai==0.6.0
-setuptools
